read user online status api/actions/reducer

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' " />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' https://electron-chat-1d091-default-rtdb.firebaseio.com https://s-usc1c-nss-237.firebaseio.com "
+    />
     <title>Electron Chat</title>
   </head>
   <body>
