--- a/splash.html
+++ b/splash.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="loading-container">
-      <h1>Chat App Loading...</h1>
+      <h1>ReactChat Loading...</h1>
       <img
         src="./assets/images/react.svg"
         alt="react-logo"
