Updated some of the software for ReactChat along with updated version

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self' https://*.firebaseio.com"
     />
-    <title>Electron Chat</title>
+    <title>ReactChat</title>
   </head>
   <body>
     <div id="chatApp"></div>
