--- a/splash.html
+++ b/splash.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
-    <title>Electron Chat</title>
+    <title>ReactChat</title>
     <link rel="stylesheet" href="./splash.css" />
   </head>
   <body>
